Related: tdf#94377 RTF export: support multiple paragraphs in editeng text

Write a \par at the end of each paragraph instead of writing one at the
end of the whole text only.

Change-Id: I984b31d4ae3d2e728c993b25bfde761dcad063ae